sass/theme/_theme.scss
/* Bootstrap Overrides */

h1, h2 {
  font-family: $font-family-serif;
  font-weight: $font-weight-bold;
  margin-top: 1.5rem;
  margin-bottom: 1.25rem;
}

h1:not(.entry-title), h2:not(.entry-title) {
  margin-top: 2.5rem;
}

h3, h4, h5, h6 {
  font-family: $font-family-subhead;
  font-weight: $font-weight-bold;
}

strong {
  font-weight: bold;
  letter-spacing: 0.05rem;
}

a:hover {
  text-decoration: none;
}

blockquote, .blockquote {
  //font-family: $font-family-serif;
  color: $tomorrow-blue;
  font-weight: bold;
  letter-spacing: 0.05rem;
  &.wp-block-quote.is-large p, &.wp-block-quote.is-style-large p {
    font-style: normal;
  }
  cite {
    position: relative;
    font-size: $small-font-size;
    font-style: normal;
  }
}

figcaption {
  padding-top: $spacer * 0.25;
  color: $gray-600;
  font-size: 0.8em;
  text-align: center;
}

.navbar {
  font-family: $navbar-font-family;
  &.bg-primary {
    .navbar-brand {
      color: $white;
    }
  }
  #wrapper-logo {
    min-height: 68px;
    .navbar-brand {
      position: absolute;
      top: -8px;
      img {
        max-height: 101px;
        width: auto;
      }
    }
  }
  ul.navbar-nav {
    li {
      a {
        text-transform: uppercase;
        font-size: $navbar-font-size;
        font-weight: $font-weight-bold;
      }
      @include media-breakpoint-down(sm) {
        .dropdown-menu .menu-item .dropdown-item {
          white-space: normal;
        }    
      }
      &.current-menu-item, &.current-page-ancestor {
        border-bottom: 1px solid $white;
      }
      &.nav-subitem {
        a {
          text-transform: initial;
          padding-left: 2.25rem;
        }
      }
      &.nav-btn-donate, &.nav-btn-cdpc, &.nav-btn-gtt {
        margin-top: -2px;
        margin-left: 7px;
        a {
          color: rgba($white, 1);
          padding: 5px;
        }
      }
      &.nav-btn-cdpc a.nav-link:hover {
        color: $primary;
      }
      &.nav-btn-gtt a {

      }
      .dropdown-header {
        text-transform: uppercase;
      }
      .dropdown-menu {
        li {
          a {
            font-weight: normal;
          }
        }
      }
      @include media-breakpoint-up(lg) {
        &:hover>.dropdown-menu {
          display: block;
        }
      }
    }
  }
}

.jumbotron {
  @include media-breakpoint-between(sm,md) {
    h1 {
      font-size: 2.75rem;
      margin-top: 0;
    }
    h2 {
      font-size: 1.5rem;
    }
  }
  @include media-breakpoint-down(sm) {
    h1 {
      font-size: 2.25rem;
      margin-top: 0;
    }
    h2 {
      font-size: 1.25rem;
    }
  }
  h2 {
    font-weight: normal;
  }
}

.card-columns {
  @include media-breakpoint-up(lg) {
    column-count: 3;
  }
  @include media-breakpoint-only(md) {
    column-count: 2;
  }
  @include media-breakpoint-down(sm) {
    column-count: 1;
  }
}

.card-columns.card-horizontal {
  @include media-breakpoint-up(lg) {
    column-count: 2;
  }
  @include media-breakpoint-down(md) {
    column-count: 1;
  }
}

.side-quote {
  color: $primary;
  font-size: $font-size-lg;
  font-weight: 700;
  margin-top: 100px;
}

.lead {
  font-size: $font-size-base * 1.25;
  letter-spacing: $tighter-letter-spacing;
}

.btn {
  font-family: $font-family-sans-serif;
  letter-spacing: $tight-letter-spacing;
}

/* Beaver Builder Overrides */

.wrapper {
  &#full-width-page-wrapper {
    #content {
      padding: 0;
      margin: 0;
      max-width: none;
      width: auto;
      .entry-header {
        /* make this a container with fixed width */
        margin-left: auto;
        margin-right: auto;
        @include make-container-max-widths();
        padding-left: 15px;
        padding-right: 15px;
      }
    }
  } 
  &.has-hero {
    padding-top: 0;
    .hero-header {
      position: relative;
      background-color: rgba($black, .85);
      overflow: visible;
      margin-bottom: $spacer * 3;
      &.overlay:before {
        position: absolute;
        content:" ";
        top:0;
        left:0;
        width:100%;
        height:100%;
        display: block;
        z-index:0;
        background-color: rgba($black, 0.5);
      }
      * {
        position: relative;
      }
      h1 {
        color: $gray-100;
        text-align: center;
      }
      .lead {
        color: $gray-100;
        text-align: center;
      }
    }
  }
}

.fl-heading {
  /* Dual-colour headings */
  .fl-heading-text {
    strong {
      color: $secondary;
      width: 100%;
    }
  }
}

.fl-module-content {
  blockquote, .blockquote {
    p {
      font-size: $font-size-base * 2;
      line-height: $line-height-base * 0.8;
      color: $tomorrow-blue;
      font-weight: bold;
      letter-spacing: 0.05rem;
    }
  }
}

.fl-button-text {
  letter-spacing: $tight-letter-spacing;
}

.fl-module-heading.sunken {
  z-index: 3;
  position: relative;
  .fl-module-content {
    position: absolute;
    width: calc(100% - 40px);
    .fl-heading:after {
      position: absolute;
      content: '';
      height: 2px;
    /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
      bottom: -16px;
      margin: 0 auto;
      left: 0;
      right: 0;
      width: 60px;
      background: $white;
    }
  }
}

.fl-module-post-slider {
  .bx-wrapper {
    margin-bottom: 0;
    .fl-post-slider-content {
      * {
        max-width: 1060px;
        margin-left: auto !important;
        margin-right: auto !important;
        // I'm so sorry
      }
      .fl-post-slider-feed-meta {
        font-size: $small-font-size;
      }
      .fl-post-slider-feed-content {
        //letter-spacing: $tighter-letter-spacing;
        font-size: $font-size-base * 1.25;
      }
    }
    .bx-controls {
      bottom: 3rem;
      margin-top: 0;
      .bx-pager-item {
        .bx-pager-link {
          background: $gray-500;
          &.active {
            background: $gray-100;
          }
        }
      }
    }
  }
}
/* ... */

